# midi-chord-detector-plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.ps1  build_stanalone.bat  build_standalone.ps1  run_tests.ps1
.github/: FUNDING.yml
Docs/: Algorithm-Explanation.md  Algorithm-Implementation.md  H-WCTM-Algorithm-Explanation.md  H-WCTM-Algorithm-Implementation.md  Technical-Design.md
Resources/: README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Version.h
Source/chord_detection/api/: JuceChordDetector.h
Source/chord_detection/detector/: ChordCandidate.h  ChordDetector.cpp  ChordDetector.h  ChordFormatter.cpp  ChordFormatter.h  ChordPattern.h  ChordPatterns.cpp  ChordPatterns.h  ChordScoring.cpp  ChordScoring.h  ChordTypes.h  NoteUtils.cpp  NoteUtils.h  VoicingAnalyzer.cpp  VoicingAnalyzer.h
Source/core/: CandidateGenerator.cpp  CandidateGenerator.h  ChordCandidate.h  ChordDetector.cpp  ChordDetector.h  ChordDetectorEngine.cpp  ChordDetectorEngine.h  ChordFormula.h  ChordResolver.cpp  ChordResolver.h  ChordTemplates.h  ChordTypes.h  ChromaVector.h  ConfidenceScorer.cpp  ConfidenceScorer.h  HarmonicMemory.cpp  HarmonicMemory.h  MidiNoteState.cpp  MidiNoteState.h  TimeWindowBuffer.cpp  TimeWindowBuffer.h
Source/standalone/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/tests/: CMakeLists.txt  ChordDetectionTests.cpp  chord_tests.json  expand_json_chords.py  json_to_cpp_tests.py
Source/ui/: ChordDisplayComponent.cpp  ChordDisplayComponent.h  PianoKeyboardView.cpp  PianoKeyboardView.h
